--- a/documention/assets/css/style.scss
+++ b/documention/assets/css/style.scss
@@ -156,3 +156,15 @@ body {
 .text-center {
     text-align: center;
 }
+
+.seperate {
+    margin-bottom: 25px;
+}
+
+kbd {
+    color: #ff6776;
+}
+
+:focus-visible {
+    outline: none;
+}
