--- a/documention/assets/css/style.css
+++ b/documention/assets/css/style.css
@@ -86,6 +86,8 @@ body {
 .main [right] {
   width: 83%;
   margin-top: 30px;
+  margin-bottom: 50px;
+  margin-right: 20px;
   padding: 0 0px;
 }
 
@@ -141,8 +143,21 @@ body {
   margin-bottom: 25px;
 }
 
-kbd {
+kbd,
+.btn {
+  cursor: pointer;
   color: #ff6776;
+  background-color: #333;
+  padding: 2px 7px;
+  border: unset;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+kbd:hover,
+.btn:hover {
+  background-color: #444;
 }
 
 :focus-visible {
