--- a/documention/assets/css/style.scss
+++ b/documention/assets/css/style.scss
@@ -5,6 +5,10 @@ body {
     background-color: #111;
 }
 
+:root {
+    --separate-px: 25px;
+}
+
 .content {
     color: #eee;
 
@@ -66,7 +70,16 @@ body {
                 text-align: center;
                 padding: 10px 25px;
                 background-color: #555;
-                border-radius: 3px;
+
+                &:first-child {
+                    border-top-left-radius: 3px;
+                    border-top-right-radius: 3px;
+                }
+
+                &:last-child {
+                    border-end-end-radius: 3px;
+                    border-end-start-radius: 3px;
+                }
 
                 &:hover,
                 &.active {
@@ -159,8 +172,12 @@ body {
     text-align: center;
 }
 
-.seperate {
-    margin-bottom: 25px;
+.separate {
+    margin-bottom: var(--separate-px);
+}
+
+font[color="red"] {
+    margin-right: 5px;
 }
 
 kbd,
